--- a/src/forms/css/settings/_honeycomb.forms.settings.toggle.scss
+++ b/src/forms/css/settings/_honeycomb.forms.settings.toggle.scss
@@ -23,4 +23,4 @@ $hc-toggle-background-color-active: color('blue') !default;
 $hc-toggle-background-color-disabled: color('grey', 3) !default;
 $hc-toggle-foreground-color: color('white') !default;
 $hc-toggle-container-top-margin: 3px !default;
-$hc-toggle-label-top-margin: 2px !default;
+$hc-toggle-label-top-margin: 0px !default;
